[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/robosapien.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://states/Game/UI.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 52
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "GameOverAnimation"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("GameOver:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.392157 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOver/PanelContainer:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 198.5, -220 ), Vector2( 198.5, 373 ) ]
}

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 40.0
margin_bottom = 14.0
text = "Score: %d"

[node name="GameOver" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -161.5
margin_top = -700.0
margin_right = 161.5
margin_bottom = -486.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 316.0
margin_bottom = 207.0
custom_constants/separation = 12

[node name="GameOverLabel" type="Label" parent="GameOver/PanelContainer/VBoxContainer"]
margin_right = 309.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1

[node name="ScoreLabel" type="Label" parent="GameOver/PanelContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 309.0
margin_bottom = 102.0
text = "Your Score: %d"
align = 1

[node name="HighScoreLabel" type="Label" parent="GameOver/PanelContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 309.0
margin_bottom = 148.0
text = "High Score: %d"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GameOver/PanelContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 309.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReplayButton" type="Button" parent="GameOver/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 108.0
margin_bottom = 40.0
text = "Replay"

[node name="QuitButton" type="Button" parent="GameOver/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 112.0
margin_right = 309.0
margin_bottom = 40.0
text = "Exit to Menu"

[node name="GameOverAnimationPlayer" type="AnimationPlayer" parent="."]
anims/GameOverAnimation = SubResource( 2 )

[connection signal="pressed" from="GameOver/PanelContainer/VBoxContainer/HBoxContainer/ReplayButton" to="." method="_on_ReplayButton_pressed"]
[connection signal="pressed" from="GameOver/PanelContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
